--- a/basic/src/main/resources/templates/hello.html
+++ b/basic/src/main/resources/templates/hello.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
+<a href="/hello" > </a>
 <p th:text="'안녕하세요. ' + ${data}">안녕하세요. 기본값</p>
 </body>
 </html>
