--- a/jpa1/src/main/resources/templates/fragments/bodyHeader.html
+++ b/jpa1/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+<nav th:fragment="bodyHeader">
+    <div> <a> 회원목록 </a></div>
+    <div> <a> 회원추가 </a></div>
+</nav>
