--- a/jpa1/src/main/resources/templates/fragments/header.html
+++ b/jpa1/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:fragment="header">
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" >
 
-</body>
-</html>
+</head>
