--- a/jpa1/src/main/resources/templates/home/home.html
+++ b/jpa1/src/main/resources/templates/home/home.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragments/header :: header}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
+<div th:replace="~{fragments/bodyHeader :: bodyHeader}"> 네이게이션 바 </div>
+
+<section>
+    <h1> 홈이야~~ </h1>
+</section>
+
+<div th:replace="~{fragments/footer :: footer}"> 풋터</div>
 </body>
 </html>
