--- a/jpa1/src/main/resources/templates/fragments/bodyHeader.html
+++ b/jpa1/src/main/resources/templates/fragments/bodyHeader.html
@@ -2,6 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 
 <nav th:fragment="bodyHeader">
-    <div> <a> 회원목록 </a></div>
-    <div> <a> 회원추가 </a></div>
+    <div> <a href="/member/members"> 회원목록 </a></div>
+    <div> <a href="/member"> 회원추가 </a></div>
 </nav>
