--- a/jpa1/src/main/resources/templates/home/home.html
+++ b/jpa1/src/main/resources/templates/home/home.html
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}">
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
+
 <body>
 
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"> 네이게이션 바 </div>
+<div class="row">
+
+    <div th:replace="~{fragments/bodyHeader :: bodyHeader}" />
+</div>
 
 <section>
-    <h1> 홈이야~~ </h1>
+    <div> 홈화면 </div>
 </section>
+<div th:replace="~{fragments/footer :: footer}" />
 
-<div th:replace="~{fragments/footer :: footer}"> 풋터</div>
+<!-- /container -->
+
 </body>
 </html>
