--- a/jpa1/src/main/resources/templates/fragments/bodyHeader.html
+++ b/jpa1/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 
-<nav th:fragment="bodyHeader">
-    <div> <a href="/member/members"> 회원목록 </a></div>
-    <div> <a href="/member"> 회원추가 </a></div>
-</nav>
+<div th:fragment="bodyHeader" class="container banner">
+    <div class="col menu_item" onclick="location.href='/member/members'"> <a href="/member/members">회원목록</a> </div>
+    <div class="col menu_item" onclick="location.href='/member'"> <a href="/member" >회원추가</a> </div>
+    <div class="col menu_item" onclick="location.href='/study'"> <a href="/study" >기록 등록</a> </div>
+    <div class="col menu_item" onclick="location.href='/study/records'"> <a href="/study/records" >기록 목록</a> </div>
+</div>
