--- a/jpa1/src/main/resources/templates/fragments/footer.html
+++ b/jpa1/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <footer id="footer" class="row" th:fragment="footer">
-    <p> this is footer </p>
+    <p>&copy; this is footer</p>
 </footer>
