--- a/jpa1/src/main/resources/templates/member/joinForm.html
+++ b/jpa1/src/main/resources/templates/member/joinForm.html
@@ -1,33 +1,37 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}">
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <body>
 
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"> 네이게이션 바 </div>
-
+<div class="row">
+    <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
+</div>
 <section>
-
     <form action="/member" method="post">
-        <div>
-        <input type="text" id="id" name="id" placeholder="id를 입력하세요">
+
+        <div class="alert" th:if="${not #strings.isEmpty(msg)}">
+            <strong th:text="${msg}"> </strong>
         </div>
-        <div>
-            <input type="text" id="pw" name="pw" placeholder="pw를 입력하세요">
+
+        <div class="form-outline mb-4">
+            <input type="text" id="id" name="id" class="form-control form-control-lg" placeholder="ID을 입력하세요"/>
         </div>
-        <div>
-            <input type="text" id="name" name="name" placeholder="name를 입력하세요">
+        <div class="form-outline mb-4">
+            <input type="text" id="pw" name="pw" class="form-control form-control-lg" placeholder="PW을 입력하세요"/>
         </div>
-        <div>
-            <button type="submit"> 회원 등록 </button>
+        <div class="form-outline mb-4">
+            <input type="text" id="name" name="name" class="form-control form-control-lg" placeholder="name을 입력하세요"/>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <button type="submit"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
         </div>
     </form>
 
 
 </section>
+<div th:replace="~{fragments/footer :: footer}"></div>
 
-<div th:replace="~{fragments/footer :: footer}"> 풋터</div>
 </body>
 </html>
