--- a/jpa1/src/main/resources/templates/member/list.html
+++ b/jpa1/src/main/resources/templates/member/list.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header :: header}">
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
 <body>
 
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"> 네이게이션 바 </div>
-
-<section>
+<div class="row">
+  <div th:replace="~{fragments/bodyHeader :: bodyHeader}"/></div>
+</div>
+<br>
+<div class="row mb-2">
+  <div class="col">아이디</div>
+  <div class="col">이름</div>
+  <div class="col">권한</div>
+  <div class="col">회원삭제1</div>
+  <div class="col">회원삭제2</div>
+</div>
+<th:block th:each="member :${list}">
   <div class="row mb-2">
-    <div class="col">아이디</div>
-    <div class="col">이름</div>
-    <div class="col">권한</div>
-    <div class="col">회원삭제1</div>
-    <div class="col">회원삭제2</div>
+    <div class="col" th:text="${member.getLoginId()}">admin</div>
+    <div class="col" th:text="${member.getName()}" >관리자</div>
+    <div class="col" th:text="${member.getRole()}">ADMIN</div>
+    <!-- member/keyId=${member.getId()}-->
+    <div class="col"><a class ="mybtn" th:href="@{/member/{keyId}(keyId=${member.getId()})}">삭제1</a></div>
+    <div class="col"><button class="btn btn-dark" th:onclick="|deleteMember(${member.getId()})|">삭제2</button></div>
   </div>
-  <th:block th:each="member :${list}">
-    <div class="row mb-2">
-      <div class="col" th:text="${member.loginId}">아이디</div>
-      <div class="col" th:text="${member.name}">이름</div>
-      <div class="col" th:text="${member.role}" >권한</div>
-      <div class="col" th:href="@{/member/{keyId}(keyId=${member.id})}">회원삭제1</div>
-      <div class="col">회원삭제2</div>
-  </div>
-  </th:block>
-</section>
-
-<div th:replace="~{fragments/footer :: footer}"> 풋터</div>
+</th:block>
+<div th:replace="~{fragments/footer :: footer}"> </div>
 </body>
 </html>
