--- a/jpa1/src/main/resources/templates/member/list.html
+++ b/jpa1/src/main/resources/templates/member/list.html
@@ -27,3 +27,19 @@
 <div th:replace="~{fragments/footer :: footer}"> </div>
 </body>
 </html>
+
+<script>
+  function deleteMember(id){
+    fetch('/member/'+id ,{ method: 'DELETE'} )
+            .then((response) => response.text())
+            .then((data) => refresh(data));
+  }
+
+  function refresh(data){
+    if(data=="ok"){
+      alert("회원탈퇴 성공");
+      location.href="/member/members";
+    }
+  }
+
+</script>
