--- a/jpa1/src/main/resources/templates/study/addForm.html
+++ b/jpa1/src/main/resources/templates/study/addForm.html
@@ -14,10 +14,10 @@
         <div class="form-group" >
 
             <label for="member"> 회원 </label>
-            <select name="memberId" id="member" class="form-control">
+            <select name="memberLoginId" id="member" class="form-control">
                 <option value="">회원선택</option>
                 <option th:each="member : ${members}"
-                        th:value="${member.getId()}"
+                        th:value="${member.getLoginId()}"
                         th:text="${member.getName()}" />
             </select>
 
