--- a/jpa1/src/main/resources/templates/study/list.html
+++ b/jpa1/src/main/resources/templates/study/list.html
@@ -20,14 +20,14 @@
 
 <th:block th:each="record : ${list}">
   <div class="row mb-2">
-    <div class="col" th:text="${record.getId()}" >ID1</div>
-    <div class="col" th:text="${record.getMember().getName()}">홍길동</div>
-    <div class="col" th:text="|${record.getStudyDay()} ${ record.getStartTime()}|">2023-03-25</div>
-    <div class="col" th:text="${record.getStudyMins()}">30</div>
+    <div class="col" th:text="${record.studyId}" >ID1</div>
+    <div class="col" th:text="${record.member.name}">홍길동</div>
+    <div class="col" th:text="|${record.studyDay} ${ record.startTime}|">2023-03-25</div>
+    <div class="col" th:text="${record.studyMins}">30</div>
     <div class="col" th:text="${record.getEndStudyDay()}">30</div>
-    <div class="col" th:text="${record.getContents()}">30</div>
-    <div class="col"><a th:href="@{/study/{keyId}(keyId=${record.getId()})}" class="btn btn-outline-info">수정</a></div>
-    <div class="col"><button th:onclick="|deleteRecord(${record.getId()})|" class="btn btn-outline-danger">삭제</button></div>
+    <div class="col" th:text="${record.contents}">30</div>
+    <div class="col"><a th:href="@{/study/{keyId}(keyId=${record.studyId})}" class="btn btn-outline-info">수정</a></div>
+    <div class="col"><button th:onclick="|deleteRecord(${record.studyId})|" class="btn btn-outline-danger">삭제</button></div>
   </div>
 </th:block>
 
